# WordOps-Dashboard

./: .claudeconfig  .gitignore  README.md  install.sh  package-lock.json  pyproject.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-ROADMAP.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md
.planning/phases/02-site-management/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-VERIFICATION.md
.planning/phases/03-server-dashboard/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-deployment/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  (+2 more)
backend/: __init__.py  config.py  main.py  requirements.txt
backend/auth/: __init__.py  dependencies.py  models.py  routes.py  utils.py
backend/server/: __init__.py  logs.py  models.py  netdata.py  routes.py  services.py  system.py  websocket.py
backend/wordops/: __init__.py  cli.py  exceptions.py  models.py  routes.py  sites.py
deploy/: config.env.template  nginx.conf.template  wo-dashboard.service
docs/: API.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/deploy/: config.env.template  nginx.conf.template  wo-dashboard.service
frontend/src/: App.tsx  index.css
(+38 files in other folders)
